# agentx-cli

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  pr-governance.yml  release-verify.yml  release.yml  sandbox-tests.yml
crates/agents-cli/: Cargo.toml  README.md
crates/agents-cli/src/: lib.rs
crates/agentx-cli/: Cargo.toml
crates/agentx-cli/src/: agents.rs  cli.rs  commands.rs  doctor.rs  errors.rs  inspection.rs  main.rs  output.rs  package_manager.rs  self_upgrade.rs  state.rs  version_registry.rs
crates/agentx-cli/tests/: agent_surface_commands.rs  capabilities_doctor_commands.rs  exec_commands.rs  lifecycle_commands.rs
crates/agentx-cli/tests/support/: mod.rs
crates/agx-cli/: Cargo.toml
crates/agx-cli/src/: agents.rs  cli.rs  commands.rs  config.rs  context.rs  doctor.rs  errors.rs  exec.rs  inspection.rs  lock.rs  main.rs  output.rs  package_manager.rs  self_upgrade.rs  state.rs  version_registry.rs
crates/agx-cli/tests/: agent_surface_commands.rs  capabilities_doctor_commands.rs  catalog_commands.rs  config_state_commands.rs  config_upgrade_commands.rs  exec_commands.rs  lifecycle_commands.rs
crates/agx-cli/tests/support/: mod.rs
docs/: README.md
docs/adr/: 0001-rust-workspace-architecture.md
docs/runbooks/: agx-task-start.md  release-package-distribution.md  worktree-task-execution.md
fixtures/: README.md
fixtures/reference/: agents.json  commands.json  error-envelope.json  schema-summary.json
openspec/: README.md  config.yaml
openspec/changes/rewrite-quantex-cli-as-agx-rust/: design.md  proposal.md  tasks.md
openspec/changes/rewrite-quantex-cli-as-agx-rust/specs/agent-catalog/: spec.md
openspec/changes/rewrite-quantex-cli-as-agx-rust/specs/cli-surface/: spec.md
openspec/changes/rewrite-quantex-cli-as-agx-rust/specs/config-surface/: spec.md
openspec/changes/rewrite-quantex-cli-as-agx-rust/specs/development-workflow/: spec.md
openspec/changes/rewrite-quantex-cli-as-agx-rust/specs/lifecycle-commands/: spec.md
openspec/changes/rewrite-quantex-cli-as-agx-rust/specs/package-distribution/: spec.md
openspec/specs/project-memory/: spec.md
scripts/: package-release.mjs
skills/agx-agent-runtime/: SKILL.md
(+1 files in other folders)
