[package]
name = "agentx-cli"
version = "0.1.0"
description = "A lifecycle CLI for AI coding agents"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "agx"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
nu-ansi-term = "0.50.3"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting", "macros"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
serde_json = "1.0.145"
